Create English-only presentation using template - 8 slides

--- a/presentation/KadaiGPT_Hackathon_Presentation.html
+++ b/presentation/KadaiGPT_Hackathon_Presentation.html
@@ -688,8 +688,9 @@
             </svg>
         </div>
         <h1 class="main-title">KadaiGPT</h1>
-        <p class="tagline">"Bill Karo, AI Sambhalo" 🛒</p>
-        <p class="subtitle">India's First Agentic AI-Powered Retail Operations Platform for 12 Million+ Kirana Stores
+        <p class="tagline">"Smart Billing, AI Powered" 🛒</p>
+        <p class="subtitle">India's First Agentic AI-Powered Retail Operations Platform for 12 Million+ Small Retail
+            Stores
         </p>
         <div class="hackathon-badge">
             <span>🚀 AI Agentathon 2026</span>
@@ -720,7 +721,7 @@
             <div class="problem-card">
                 <div class="problem-icon">💰</div>
                 <h3>Credit Recovery Issues</h3>
-                <p>₹50,000+ stuck in "udhari" (credit) per store. No systematic way to track or remind customers. Lost
+                <p>₹50,000+ stuck in customer credit per store. No systematic way to track or remind customers. Lost
                     revenue.</p>
             </div>
             <div class="problem-card">
@@ -734,7 +735,7 @@
         <div class="stat-highlight">
             <div class="stat-item">
                 <div class="stat-number">12M+</div>
-                <div class="stat-label">Kirana Stores in India</div>
+                <div class="stat-label">Small Retail Stores in India</div>
             </div>
             <div class="stat-item">
                 <div class="stat-number">80%</div>
@@ -754,13 +755,14 @@
             <div class="solution-text">
                 <p class="section-label">The Solution</p>
                 <h2>Meet KadaiGPT 🤖</h2>
-                <p>An AI-first, voice-enabled, offline-capable retail assistant that transforms every Kirana store into
+                <p>An AI-first, voice-enabled, offline-capable retail assistant that transforms every small retail store
+                    into
                     a smart store.</p>
 
                 <ul class="feature-list">
                     <li>
                         <span class="feature-check">✓</span>
-                        <span>Voice Commands in Hindi, Tamil & English</span>
+                        <span>Voice Commands in Multiple Languages</span>
                     </li>
                     <li>
                         <span class="feature-check">✓</span>
@@ -804,7 +806,7 @@
             <div class="feature-card">
                 <div class="feature-icon-box">🎤</div>
                 <h3>Voice-First Billing</h3>
-                <p>"2 kg chawal, 1 liter tel" - Just speak and the bill is created. Multi-language support.</p>
+                <p>"2 kg rice, 1 liter oil" - Just speak and the bill is created. Multi-language support.</p>
             </div>
             <div class="feature-card">
                 <div class="feature-icon-box">📸</div>
@@ -846,10 +848,10 @@
                     🗣️ Natural Language Processing
                     <span class="ai-badge">AI Agent</span>
                 </h3>
-                <p>Our AI understands context, handles code-switching (Hindi-English mix), and processes complex
+                <p>Our AI understands context, handles natural language variations, and processes complex
                     commands naturally.</p>
                 <div class="ai-demo">
-                    <div class="command">User: "Ramesh ko kal ki bill bhejo whatsapp pe"</div>
+                    <div class="command">User: "Send yesterday's bill to Ramesh on WhatsApp"</div>
                     <div class="response">✓ Sent yesterday's bill (₹1,250) to Ramesh via WhatsApp</div>
                 </div>
             </div>
@@ -861,8 +863,8 @@
                 <p>Machine learning models analyze sales patterns, seasons, and local events to predict demand 7 days in
                     advance.</p>
                 <div class="ai-demo">
-                    <div class="command">System Alert: "Holi in 5 days"</div>
-                    <div class="response">📦 Suggested: Stock 50kg colors, 100 pichkaris, 30 sweets packets</div>
+                    <div class="command">System Alert: "Festival in 5 days"</div>
+                    <div class="response">📦 Suggested: Stock festival items, sweets, decorations</div>
                 </div>
             </div>
             <div class="ai-feature">
@@ -872,8 +874,8 @@
                 </h3>
                 <p>Customers can chat with your store's WhatsApp bot to check stock, place orders, and get updates.</p>
                 <div class="ai-demo">
-                    <div class="command">Customer: "Aata hai kya? Kitna ka?"</div>
-                    <div class="response">✓ "Haan, Aashirvaad 5kg - ₹285. Order karu?"</div>
+                    <div class="command">Customer: "Do you have flour? How much?"</div>
+                    <div class="response">✓ "Yes, 5kg flour - ₹285. Should I place the order?"</div>
                 </div>
             </div>
             <div class="ai-feature">
@@ -945,7 +947,7 @@
             </div>
             <div class="wa-feature">
                 <h3>🔔 Smart Reminders</h3>
-                <p>Automated credit reminders to customers. "Ramesh ji, ₹500 ki udhari baki hai" - polite, effective.
+                <p>Automated credit reminders to customers. "Dear customer, ₹500 credit is pending" - polite, effective.
                 </p>
             </div>
             <div class="wa-feature">
